--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@league-of-foundry-developers/foundry-vtt-types": "^9.280.0",
+    "terser": "^5.27.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
